--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
     <TextView
         android:text="@string/main.title"
         android:layout_width="0dp"
-        android:textColor="@color/colorText"
+        android:textColor="#FFD600"
         android:textStyle="bold"
         android:textAlignment="textEnd"
         android:textSize="20sp"
@@ -57,7 +57,11 @@
         android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@+id/tvTitleRegisterHotel"
         android:layout_height="0dp"
-        app:layout_constraintVertical_bias="0.32999998">
+        app:layout_constraintVertical_bias="0.32999998"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp">
 
     </android.support.v4.view.ViewPager>
 
