--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
-    android:background="@color/colorPrimaryDark"
+    android:background="#009688"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.icescz.hotel.activities.MainActivity">
@@ -12,7 +12,7 @@
     <TextView
         android:text="@string/main.title"
         android:layout_width="0dp"
-        android:textColor="#FFD600"
+        android:textColor="@color/colorAmarilloLight"
         android:textStyle="bold"
         android:textAlignment="textEnd"
         android:textSize="20sp"
@@ -34,11 +34,10 @@
         app:layout_constraintTop_toTopOf="parent"
         android:id="@+id/indicator"
 
-        app:stpi_circleColor="#fff"
-        app:stpi_indicatorColor="#1B5E20"
-        app:stpi_lineColor="#fff"
-        app:stpi_lineDoneColor="#1B5E20"
-
+        app:stpi_circleColor="#FFF"
+        app:stpi_indicatorColor="@color/colorAmarilloLight"
+        app:stpi_lineColor="#FFF"
+        app:stpi_lineDoneColor="@color/colorAmarilloLight"
 
         android:layout_marginStart="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -53,7 +52,6 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="16dp"
         android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@+id/tvTitleRegisterHotel"
         android:layout_height="0dp"
