--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,6 @@
     <color name="colorDivider">#BDBDBD</color>
     <color name="colorButtonCompleteState">#1ACD96</color>
     <color name="colorWhite">#FFFFFF</color>
+
+    <color name="colorAmarilloLight">#FFD600</color>
 </resources>
