--- a/app/src/main/res/layout/form_register_hotel_one.xml
+++ b/app/src/main/res/layout/form_register_hotel_one.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-
     <com.github.florent37.materialtextfield.MaterialTextField
+
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:id="@+id/textInputLayout"
@@ -23,6 +22,7 @@
 
         <EditText
             android:id="@+id/edtRazonSocial"
+            android:inputType="text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/main.razonsocial" />
